# similar-sneakers

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
inference/: Dockerfile  db_embeddings_insert.ipynb  dowload_model.py  embeddings_to_db.py  main.py  utils.py
sneakers/data/: create_validation_set.ipynb  curl_params.py  get_images.ipynb  get_images.py  labelled_dataset.csv  labelled_dataset_creation.ipynb  resize_images.ipynb  ssense_scraping.ipynb  url_dataset_extended.csv
