[tool.poetry]
name = "simular-sneakers"
version = "0.1.0"
description = ""
authors = ["Timofey Vilkov <stocer05@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.0"
numpy = "^1.26.3"
requests = "^2.31.0"
cloudscraper = "^1.2.71"
ipykernel = "^6.29.4"
tqdm = "^4.66.2"
black = "^24.3.0"
pillow = "^10.3.0"
aiohttp = "^3.9.3"


[tool.poetry.group.dev.dependencies]
black = {version = "^24.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
